# shopifake-test-runner

./: .dockerignore  .editorconfig  .env.example.dev  .env.example.prod  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  check-cd.yml  ci-cd.yml  coverage.yml  docker.yml  lint.yml  test.yml
alembic/: env.py
chart/: Chart.yaml  values.yaml
chart/templates/: job.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
src/: __init__.py  cli.py  config.py  database.py  main.py  orchestrator.py
src/tests/: conftest.py
src/tests/chaos/: __init__.py  conftest.py  test_combined_load_chaos.py  test_network_chaos.py  test_pod_failures.py  test_stress.py
src/tests/chaos/helpers/: __init__.py  chaos_helper.py
src/tests/helpers/: __init__.py  api_client.py
src/tests/load/: __init__.py  locustfile.py
src/tests/load/scenarios/: __init__.py  health.py
src/tests/load/tasks/: __init__.py
src/tests/system/: __init__.py  test_health.py
tests/: conftest.py  test_basic.py
